# Personlaized-Trainer-Using-Agentic-AI

./: .gitignore  README.md  SentiMind_Memory_Implementation_Plan.md  clinical_validation_plan.md  dashboard_and_glossary.md  fyp_objectives_and_features.md  implementation_plan.md  objective_three.md
mental_health_wellness/: .dockerignore  .gitignore  Dockerfile  PROJECT_STRUCTURE.md  README.md  api_server.py  check_db.py  db_test.txt  pipeline_shortcomings.md  pyproject.toml  reproduce_db_issue.py  requirements.txt  run_pipeline_tests.py  seed_new_techniques.py  seed_new_techniques_fixed.py  seed_techniques.py  test_edge_cases.py  test_latency.py
mental_health_wellness/docs/: SENTIMIND_V3_ARCHITECTURE.md  comparison.md
mental_health_wellness/prisma/: pgvector_semantic_embedding.sql  schema.prisma
mental_health_wellness/scripts/: benchmark_gemini_models.py  fix_strip_prefix.py  inject_planner_v13.py  inject_selector_v13.py  insert_planner_helpers.py  insert_search_log.py  patch_bypass_persist.py  seed_new_techniques.py  seed_new_techniques_fixed.py  seed_research_backed_techniques.py  seed_techniques.py  test_strip.py
mental_health_wellness/tests/: diag_index_count.py  diag_semantic_search.py  newTest.py  test_acceptance_preserves_context.py  test_anonymous_mode.py  test_catastrophic_exam_thought.py  test_clinical.py  test_clinical_cases.py  test_clinical_lifecycle.py  test_complement_series.py  test_complement_unit.py  test_comprehensive_cases.py  test_context_complete_technique_gate.py  test_contextual_followup_anchor.py  test_crisis_consent_records.py  test_emotion_payload_priority.py  test_environmental_design_appropriate_use.py  test_exam_sleep_technique_selection.py  test_gate_calibration.py  test_gemini_routing_safety.py  test_gratitude_journaling_avoidance.py  test_intensity_anchoring.py  test_lifecycle_e2e.py  test_lifecycle_outcome_layer.py  (+10 more)
(+221 files in other folders)
